Adding APEC '24 paper and adjusting bio

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Projects</a></li>
-            <li><a href="info_me.html">About Me</a></li>
+            <!-- <li class="active"><a href="#">Projects</a></li> -->
+            <!--<li><a href="info_me.html">About Me</a></li> -->
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -61,14 +61,13 @@
             <div class="col-xs-8">
                 <h1>
                     <br>
-                        I'm a Hertz Fellow and Ph.D. student working with Robert Pilawa designing high performance power electronics converters at the University of California, Berkeley. 
-
+                        Rod Bayliss III is a Ph.D. candidate in the Pilawa Power Electronics Research Group at the University of California, Berkeley. He previously received his B.S. and M.Eng. degrees in electrical engineering from the Massachusetts Institute of Technology (MIT) in 2020 and 2021.  His research interests include multi-level power converter design and control and high performance power magnetics design. Rod is a recipient of the Hertz Fellowship and the UC Berkeley Chancellor's Fellowship.
                         <br>
                         <br>
                 </h1>
                         <h2>
                             143 Cory Hall <br>
-                            Univesity of California at Berkeley<br>
+                            Univesity of California, Berkeley<br>
                             Berkeley, CA 94720<br>
                             <a href="mailto:rodbay@berkeley.edu"> rodbay@berkeley.edu</a>
                         </h2>
@@ -80,19 +79,21 @@
                 </h1>
                 <body>
                 <ol>
-                     <li> <b><a href = "https://ieeexplore.ieee.org/document/10221009">A Combined Power Factor Correcting and Active Voltage Balancing Control Technique for Buck-Type AC/DC Grid-Tied Flying Capacitor Multilevel Converters</a></b> <br>Roderick S. Bayliss, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. IEEE 24th Workshop on Control and Modeling for Power Electronics (COMPEL), 2023</li>
+                     <li> <b><a href = "https://ieeexplore.ieee.org/document/10509201" target="_blank">High-Performance High-Power Inductor Design for High-Frequency Applications</a></b> <br>Mansi V. Joisher, Roderick S. Bayliss, Mike K. Ranjram, Rachel S. Yang, Alexander Jurkov, David J. Perreault. IEEE Applied Power Electronics Conference and Exposition (APEC), 2024</li>
                      <br>
-                     <li> <b><a href = "https://ieeexplore.ieee.org/document/10131430">A Segmented Electric Aircraft Drivetrain Employing 10-Level Flying Capacitor Multi-Level Dual- Interleaved Power Modules</a></b> <br>Roderick S. Bayliss, Rahul K. Iyer, Richard Liou, Robert C. N. Pilawa-Podgurski. IEEE Applied Power Electronics Conference and Exposition (APEC), 2023</li>
+                     <li> <b><a href = "https://ieeexplore.ieee.org/document/10221009" target="_blank">A Combined Power Factor Correcting and Active Voltage Balancing Control Technique for Buck-Type AC/DC Grid-Tied Flying Capacitor Multilevel Converters</a></b> <br>Roderick S. Bayliss, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. IEEE 24th Workshop on Control and Modeling for Power Electronics (COMPEL), 2023</li>
                      <br>
-                     <li> <b><a href = "https://ieeexplore.ieee.org/document/9829991">On the Role of Switch Output Capacitance on Passive Balancing within the Flying Capacitor Multilevel Converter</a></b> <br>Roderick S. Bayliss, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. IEEE 23rd Workshop on Control and Modeling for Power Electronics (COMPEL), 2022</li>
+                     <li> <b><a href = "https://ieeexplore.ieee.org/document/10131430" target="_blank">A Segmented Electric Aircraft Drivetrain Employing 10-Level Flying Capacitor Multi-Level Dual- Interleaved Power Modules</a></b> <br>Roderick S. Bayliss, Rahul K. Iyer, Richard Liou, Robert C. N. Pilawa-Podgurski. IEEE Applied Power Electronics Conference and Exposition (APEC), 2023</li>
                      <br>
-                     <li> <a href = "https://ieeexplore.ieee.org/document/9830006"><b>Fundamental State-Space Modeling Methodology for the Flying Capacitor Multilevel Converter</b></a><br> Nathan C. Brooks, Rahul K. Iyer, Roderick S. Bayliss, Robert C. N. Pilawa-Podgurski. IEEE 23rd Workshop on Control and Modeling for Power Electronics (COMPEL), 2022</li>
+                     <li> <b><a href = "https://ieeexplore.ieee.org/document/9829991" target="_blank">On the Role of Switch Output Capacitance on Passive Balancing within the Flying Capacitor Multilevel Converter</a></b> <br>Roderick S. Bayliss, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. IEEE 23rd Workshop on Control and Modeling for Power Electronics (COMPEL), 2022</li>
                      <br>
-                    <li> <a href = "https://ieeexplore.ieee.org/document/9487301"><b>Design, Implementation, and Evaluation of High-Efficiency High-Power Radio-Frequency Inductors</b></a><br> Roderick S. Bayliss, Rachel S. Yang, Alex J. Hanson, Charles R. Sullivan, David J. Perreault. IEEE Applied Power Electronics Conference and Exposition (APEC), 2021</li>
+                     <li> <a href = "https://ieeexplore.ieee.org/document/9830006" target="_blank"><b>Fundamental State-Space Modeling Methodology for the Flying Capacitor Multilevel Converter</b></a><br> Nathan C. Brooks, Rahul K. Iyer, Roderick S. Bayliss, Robert C. N. Pilawa-Podgurski. IEEE 23rd Workshop on Control and Modeling for Power Electronics (COMPEL), 2022</li>
                      <br>
-                    <li> <a href = "https://ieeexplore-ieee-org.libproxy.berkeley.edu/document/9487458"><b>A Multi-Phase Segmented Drive Comprising Arrayed Flying Capacitor Multi-Level Modules</b></a><br> Nathan Pallo, Roderick S. Bayliss, Robert C. N. Pilawa-Podgurski. IEEE Applied Power Electronics Conference and Exposition (APEC), 2021</li>
+                    <li> <a href = "https://ieeexplore.ieee.org/document/9487301" target="_blank"><b>Design, Implementation, and Evaluation of High-Efficiency High-Power Radio-Frequency Inductors</b></a><br> Roderick S. Bayliss, Rachel S. Yang, Alex J. Hanson, Charles R. Sullivan, David J. Perreault. IEEE Applied Power Electronics Conference and Exposition (APEC), 2021</li>
                      <br>
-                    <li> <a href = "https://ieeexplore-ieee-org.libproxy.berkeley.edu/document/9435213"><b>A Modular Multi-Phase Actively Controlled Resistive Load Bank with Zero-Current Switching Capability and Integrated Snubbers</b></a><br> Amanda Jackson, Nathan Pallo, Roderick S. Bayliss, Robert C.N. Pilawa-Podgurski. IEEE Power and Energy Conference at Illinois (PECI), 2021</li> 
+                    <li> <a href = "https://ieeexplore-ieee-org.libproxy.berkeley.edu/document/9487458" target="_blank"><b>A Multi-Phase Segmented Drive Comprising Arrayed Flying Capacitor Multi-Level Modules</b></a><br> Nathan Pallo, Roderick S. Bayliss, Robert C. N. Pilawa-Podgurski. IEEE Applied Power Electronics Conference and Exposition (APEC), 2021</li>
+                     <br>
+                    <li> <a href = "https://ieeexplore-ieee-org.libproxy.berkeley.edu/document/9435213" target="_blank"><b>A Modular Multi-Phase Actively Controlled Resistive Load Bank with Zero-Current Switching Capability and Integrated Snubbers</b></a><br> Amanda Jackson, Nathan Pallo, Roderick S. Bayliss, Robert C.N. Pilawa-Podgurski. IEEE Power and Energy Conference at Illinois (PECI), 2021</li> 
                 </ol>
             </body>
             </div>
