Adding Active balancing journal paper, removing info_me links

--- a/index.html
+++ b/index.html
@@ -75,10 +75,12 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Publications <small>Conference Papers</small>
+                <h1 class="page-header">Publications 
                 </h1>
                 <body>
                 <ol>
+                     <li> <b><a href = "https://ieeexplore.ieee.org/document/10601504" target="_blank">A High-Bandwidth Parallel Active Balancing Controller for Current-Controlled Flying Capacitor Multilevel Converters</a></b> <br>Rahul K. Iyer, Ivan Z. Petric, Roderick S. Bayliss, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. IEEE Transactions on Power Electronics, 2024</li>
+                     <br>
                      <li> <b><a href = "https://ieeexplore.ieee.org/document/10509201" target="_blank">High-Performance High-Power Inductor Design for High-Frequency Applications</a></b> <br>Mansi V. Joisher, Roderick S. Bayliss, Mike K. Ranjram, Rachel S. Yang, Alexander Jurkov, David J. Perreault. IEEE Applied Power Electronics Conference and Exposition (APEC), 2024</li>
                      <br>
                      <li> <b><a href = "https://ieeexplore.ieee.org/document/10221009" target="_blank">A Combined Power Factor Correcting and Active Voltage Balancing Control Technique for Buck-Type AC/DC Grid-Tied Flying Capacitor Multilevel Converters</a></b> <br>Roderick S. Bayliss, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. IEEE 24th Workshop on Control and Modeling for Power Electronics (COMPEL), 2023</li>
@@ -93,7 +95,7 @@
                      <br>
                     <li> <a href = "https://ieeexplore-ieee-org.libproxy.berkeley.edu/document/9487458" target="_blank"><b>A Multi-Phase Segmented Drive Comprising Arrayed Flying Capacitor Multi-Level Modules</b></a><br> Nathan Pallo, Roderick S. Bayliss, Robert C. N. Pilawa-Podgurski. IEEE Applied Power Electronics Conference and Exposition (APEC), 2021</li>
                      <br>
-                    <li> <a href = "https://ieeexplore-ieee-org.libproxy.berkeley.edu/document/9435213" target="_blank"><b>A Modular Multi-Phase Actively Controlled Resistive Load Bank with Zero-Current Switching Capability and Integrated Snubbers</b></a><br> Amanda Jackson, Nathan Pallo, Roderick S. Bayliss, Robert C.N. Pilawa-Podgurski. IEEE Power and Energy Conference at Illinois (PECI), 2021</li> 
+                    <li> <a href = "https://ieeexplore-ieee-org.libproxy.berkeley.edu/document/9435213" target="_blank"><b>A Modular Multi-Phase Actively Controlled Resistive Load Bank with Zero-Current Switching Capability and Integrated Snubbers</b></a><br> Amanda Jackson, Nathan Pallo, Roderick S. Bayliss, Robert C. N. Pilawa-Podgurski. IEEE Power and Energy Conference at Illinois (PECI), 2021</li> 
                 </ol>
             </body>
             </div>
@@ -111,7 +113,7 @@
         <div class="row">
             <div class="col-md-10 portfolio-item">
                 <a href="./MEng.html">
-                    <img class="img-responsive" src="./pictures/ResonantTank.png" >
+                    <img class="img-responsive" src="./pictures/ResonantTank.png" width=60%>
                 </a>
                 <h3>
                     <a href="./MEng.html">MIT Power Electronics Group M.Eng</a>
@@ -119,6 +121,7 @@
 				<p>For my Master's work I both characterized the inductor designed for my undergraduate research and investigated new, high energy density inductor designs. </p>
             </div>
         </div>
+        <!--
         <div class="row">
             <div class="col-md-10 portfolio-item">
                 <a href="./rle2.html">
@@ -130,10 +133,11 @@
 				<p>During my undergraduate research, I designed an inductor which exhibits extremely low loss at a high current, high frequency regime using a distributed-gap ferrite structure. </p>
             </div>
         </div>
+    -->
         <div class="row">
             <div class="col-md-10 portfolio-item">
                 <a href="6.332.html">
-					<img class="img-responsive" src=".\pictures\InverterTopDown.jpg">
+					<img class="img-responsive" src=".\pictures\InverterTopDown.jpg" width = 60%>
                 </a>
                 <h3>
                     <a href="./6.332.html">FSAE Custom 20 kW Traction Inverter</a>
@@ -144,7 +148,7 @@
 		<div class="row">
             <div class="col-md-10 portfolio-item">
                 <a href="./spacex.html">
-                    <img class="img-responsive" src=".\pictures\SpaceX-Logo.png" alt="Tesla Motors Logo" width=50% >
+                    <img class="img-responsive" src=".\pictures\SpaceX-Logo.png" alt="SpaceX Logo" width=50% >
                 </a>
                 <h3>
                     <a href="./spacex.html">SpaceX Internship</a>
@@ -155,7 +159,7 @@
 		<div class="row">
             <div class="col-md-10 portfolio-item">
                 <a href="./Tesla.html">
-                    <img class="img-responsive" src=".\pictures\Tesla Logo.png" alt="Tesla Motors Logo" width=50% >
+                    <img class="img-responsive" src=".\pictures\Tesla Logo.png" alt="Tesla Motors Logo" width=25% >
                 </a>
                 <h3>
                     <a href="./Tesla.html">Tesla Motors Internship</a>
@@ -163,6 +167,7 @@
                 <p>At Tesla, I developed magnetics simulation tools for PCB based magnetics and characterized magnetic materials for use in new power converters.</p>
             </div>
         </div>
+        <!---
         <div class="row">
             <div class="col-md-10 portfolio-item">
                 <a href="./bms.html">
@@ -186,7 +191,6 @@
                 <p> 6.334 Design of a Buck Converter </p>
             </div>
         </div>
-        <!---
         <div class="row">
             <div class="col-md-10 portfolio-item">
                 <a href="./rle1.html">
