--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
                 </h1>
                 <body>
                 <ol>
+                     <li> <b><a href = "https://ieeexplore.ieee.org/document/10613943" target="_blank">An Input Inductor Flying Capacitor Multilevel Converter Utilizing a Combined Power Factor Correcting and Active Voltage Balancing Control Technique for Buck-Type AC/DC Grid-Tied Applications</a></b> <br>Roderick S. Bayliss, Robert C. N. Pilawa-Podgurski. IEEE 25th Workshop on Control and Modeling for Power Electronics (COMPEL), 2024</li>
+                     <br>
                      <li> <b><a href = "https://ieeexplore.ieee.org/document/10601504" target="_blank">A High-Bandwidth Parallel Active Balancing Controller for Current-Controlled Flying Capacitor Multilevel Converters</a></b> <br>Rahul K. Iyer, Ivan Z. Petric, Roderick S. Bayliss, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. IEEE Transactions on Power Electronics, 2024</li>
                      <br>
                      <li> <b><a href = "https://ieeexplore.ieee.org/document/10509201" target="_blank">High-Performance High-Power Inductor Design for High-Frequency Applications</a></b> <br>Mansi V. Joisher, Roderick S. Bayliss, Mike K. Ranjram, Rachel S. Yang, Alexander Jurkov, David J. Perreault. IEEE Applied Power Electronics Conference and Exposition (APEC), 2024</li>
