--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
                         Rod Bayliss III is a Ph.D. candidate in the Pilawa Power Electronics Research Group at the University of California, Berkeley. He previously received his B.S. and M.Eng. degrees in electrical engineering from the Massachusetts Institute of Technology (MIT) in 2020 and 2021.  His research interests include multi-level power converter design and control and high performance power magnetics design. Rod is a recipient of the Hertz Fellowship and the UC Berkeley Chancellor's Fellowship.
                         <br>
                         <br>
+                        <b><a href = "Rod Bayliss III CV.pdf" target="_blank">CV</a>
+                        <br>
                 </h1>
                         <h2>
                             143 Cory Hall <br>
