trimming website, fixing fonts, adding photos

--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <!-- Template by Quackit.com -->
 <html lang="en">
+    <style>
+        .line__figure{
+            display: inline-block;
+            margin: 4px;
+        }
+        .rfc{
+            text-align: center;
+        }
+        .img-r{
+            vertical-align: top;
+        }
+    </style>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -76,11 +88,29 @@
             </div>
         </div>
         <div class="row">
+            <h1 class="page-header">Project Gallery</h1>
+                <h5>
+                    <figure class="line__figure">
+                        <img class="img-r" src = "./Gallery Photos/InputInductor.png" alt="Photograph of Input Inductor six-level FCML converter prototype" width="75%"/>
+                        <figcaption class="rfc">Input inductor FCML converter prototype for buck-type PFC applications.</figcaption>
+                    </figure>
+                    <figure class="line__figure">
+                        <img class="img-r" src = "./Gallery Photos/12 Level.svg" alt="Photograph of 12-level FCML converter prototype" width="90%"/>
+                        <figcaption class="rfc"> 12-Level FCML converter prototype. <br> Used for buck-type PFC and FCML converter modeling and control.</figcaption>
+                    </figure>
+                    <figure class="line__figure">
+                        <img class="img-r" src = "./Gallery Photos/FCML InverterArray.JPG" alt="Photograph of Array of FCML converters for motor drive inverters" width="75%"/>
+                        <figcaption class="rfc"> Array of FCML converters used for motor drive inverters for high-speed machines.</figcaption>
+                    </figure>
+                </h5>
+        </div>
+        <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Publications 
                 </h1>
                 <body>
-                <ol>
+                <ol reversed>
+                     <h3>
                      <li> <b><a href = "https://ieeexplore.ieee.org/document/10747536" target="_blank">On the Role of Switch Output Capacitance on Passive Balancing Within the Flying Capacitor Multilevel Converter</a></b> <br>Roderick S. Bayliss, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. <i>IEEE Transactions on Power Electronics, 2025</i></li>
                      <br>
                      <li> <b><a href = "https://ieeexplore.ieee.org/document/10613943" target="_blank">An Input Inductor Flying Capacitor Multilevel Converter Utilizing a Combined Power Factor Correcting and Active Voltage Balancing Control Technique for Buck-Type AC/DC Grid-Tied Applications</a></b> <br>Roderick S. Bayliss, Robert C. N. Pilawa-Podgurski. <i>IEEE 25th Workshop on Control and Modeling for Power Electronics (COMPEL), 2024</i></li>
@@ -102,10 +132,12 @@
                     <li> <a href = "https://ieeexplore-ieee-org.libproxy.berkeley.edu/document/9487458" target="_blank"><b>A Multi-Phase Segmented Drive Comprising Arrayed Flying Capacitor Multi-Level Modules</b></a><br> Nathan Pallo, Roderick S. Bayliss, Robert C. N. Pilawa-Podgurski. <i>IEEE Applied Power Electronics Conference and Exposition (APEC), 2021</i></li>
                      <br>
                     <li> <a href = "https://ieeexplore-ieee-org.libproxy.berkeley.edu/document/9435213" target="_blank"><b>A Modular Multi-Phase Actively Controlled Resistive Load Bank with Zero-Current Switching Capability and Integrated Snubbers</b></a><br> Amanda Jackson, Nathan Pallo, Roderick S. Bayliss, Robert C. N. Pilawa-Podgurski. <i>IEEE Power and Energy Conference at Illinois (PECI), 2021</i></li> 
+                </h3>
                 </ol>
             </body>
             </div>
         </div>
+        <!--
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Portfolio
@@ -116,6 +148,7 @@
         <!-- /.row -->
 
         <!-- Projects Row -->
+        <!--
         <div class="row">
             <div class="col-md-10 portfolio-item">
                 <a href="./MEng.html">
@@ -127,7 +160,6 @@
 				<p>For my Master's work I both characterized the inductor designed for my undergraduate research and investigated new, high energy density inductor designs. </p>
             </div>
         </div>
-        <!--
         <div class="row">
             <div class="col-md-10 portfolio-item">
                 <a href="./rle2.html">
@@ -139,7 +171,6 @@
 				<p>During my undergraduate research, I designed an inductor which exhibits extremely low loss at a high current, high frequency regime using a distributed-gap ferrite structure. </p>
             </div>
         </div>
-    -->
         <div class="row">
             <div class="col-md-10 portfolio-item">
                 <a href="6.332.html">
@@ -173,6 +204,7 @@
                 <p>At Tesla, I developed magnetics simulation tools for PCB based magnetics and characterized magnetic materials for use in new power converters.</p>
             </div>
         </div>
+        -->
         <!---
         <div class="row">
             <div class="col-md-10 portfolio-item">
