Adding open access links

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h1 class="page-header">Project Gallery</h1>
                 <h5>
                     <figure class="line__figure">
-                        <a href = "https://ieeexplore.ieee.org/document/10613943" target="_blank">
+                        <a href = "https://escholarship.org/uc/item/8bz2x11w" target="_blank">
                         <img class="img-r" src = "./Gallery Photos/InputInductor.png" alt="Input Inductor six-level FCML converter prototype" title="Input Inductor FCML Converter" sizes="(max-width:479px) 479px, 100vw"/>
                         </a>
                         <figcaption class="rfc">Input inductor FCML converter prototype for buck-type PFC applications.</figcaption>
@@ -116,7 +116,7 @@
                         <figcaption class="rfc"> 12-Level FCML converter prototype. <br> Used for buck-type PFC and FCML converter modeling and control.</figcaption>
                     </figure>
                     <figure class="line__figure">
-                        <a href = "https://ieeexplore.ieee.org/document/10131430" target="_blank">
+                        <a href = "https://escholarship.org/uc/item/8sd9h20p" target="_blank">
                         <img class="img-r" src = "./Gallery Photos/FCML InverterArray.JPG" alt="Photograph of Array of FCML converters for motor drive inverters" title="Interleaved Module FCML Inverter Array"/>
                         </a>
                         <figcaption class="rfc"> Array of FCML converters used for motor drive inverters for high-speed machines.</figcaption>
@@ -130,25 +130,27 @@
                 <body>
                 <ol reversed>
                      <h3>
-                     <li> <b><a href = "https://ieeexplore.ieee.org/document/10747536" target="_blank">On the Role of Switch Output Capacitance on Passive Balancing Within the Flying Capacitor Multilevel Converter</a></b> <br><b>Roderick S. Bayliss</b>, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. <i>IEEE Transactions on Power Electronics, 2025</i></li>
+                     <li> <b><a href = "https://escholarship.org/uc/item/1g1720kp" target="_blank">On the Role of Switch Output Capacitance on Passive Balancing Within the Flying Capacitor Multilevel Converter</a></b> <br><b>Roderick S. Bayliss</b>, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. <i>IEEE Transactions on Power Electronics, 2025</i></li>
                      <br>
-                     <li> <b><a href = "https://ieeexplore.ieee.org/document/10613943" target="_blank">An Input Inductor Flying Capacitor Multilevel Converter Utilizing a Combined Power Factor Correcting and Active Voltage Balancing Control Technique for Buck-Type AC/DC Grid-Tied Applications</a></b> <b>Roderick S. Bayliss</b>, Robert C. N. Pilawa-Podgurski. <i>IEEE 25th Workshop on Control and Modeling for Power Electronics (COMPEL), 2024</i></li>
+                     <li> <b><a href = "https://escholarship.org/uc/item/8bz2x11w" target="_blank">An Input Inductor Flying Capacitor Multilevel Converter Utilizing a Combined Power Factor Correcting and Active Voltage Balancing Control Technique for Buck-Type AC/DC Grid-Tied Applications</a></b> <b>Roderick S. Bayliss</b>, Robert C. N. Pilawa-Podgurski. <i>IEEE 25th Workshop on Control and Modeling for Power Electronics (COMPEL), 2024</i></li>
                      <br>
                      <li> <b><a href = "https://ieeexplore.ieee.org/document/10601504" target="_blank">A High-Bandwidth Parallel Active Balancing Controller for Current-Controlled Flying Capacitor Multilevel Converters</a></b> <br>Rahul K. Iyer, Ivan Z. Petric, <b>Roderick S. Bayliss</b>, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. <i>IEEE Transactions on Power Electronics, 2024</i></li>
                      <br>
                      <li> <b><a href = "https://ieeexplore.ieee.org/document/10509201" target="_blank">High-Performance High-Power Inductor Design for High-Frequency Applications</a></b> <br>Mansi V. Joisher, <b>Roderick S. Bayliss</b>, Mike K. Ranjram, Rachel S. Yang, Alexander Jurkov, David J. Perreault. <i>IEEE Applied Power Electronics Conference and Exposition (APEC), 2024</i></li>
                      <br>
-                     <li> <b><a href = "https://ieeexplore.ieee.org/document/10221009" target="_blank">A Combined Power Factor Correcting and Active Voltage Balancing Control Technique for Buck-Type AC/DC Grid-Tied Flying Capacitor Multilevel Converters</a></b> <br><b>Roderick S. Bayliss</b>, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. <i>IEEE 24th Workshop on Control and Modeling for Power Electronics (COMPEL), 2023</i></li>
+                     <li> <b><a href = "https://escholarship.org/uc/item/7zf8c8ms" target="_blank">A Combined Power Factor Correcting and Active Voltage Balancing Control Technique for Buck-Type AC/DC Grid-Tied Flying Capacitor Multilevel Converters</a></b> <br><b>Roderick S. Bayliss</b>, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. <i>IEEE 24th Workshop on Control and Modeling for Power Electronics (COMPEL), 2023</i></li>
                      <br>
-                     <li> <b><a href = "https://ieeexplore.ieee.org/document/10131430" target="_blank">A Segmented Electric Aircraft Drivetrain Employing 10-Level Flying Capacitor Multi-Level Dual- Interleaved Power Modules</a></b> <br><b>Roderick S. Bayliss</b>, Rahul K. Iyer, Richard Liou, Robert C. N. Pilawa-Podgurski. <i>IEEE Applied Power Electronics Conference and Exposition (APEC), 2023</i></li>
+                     <li> <b><a href = "https://escholarship.org/uc/item/8sd9h20p" target="_blank">A Segmented Electric Aircraft Drivetrain Employing 10-Level Flying Capacitor Multi-Level Dual- Interleaved Power Modules</a></b> <br><b>Roderick S. Bayliss</b>, Rahul K. Iyer, Richard Liou, Robert C. N. Pilawa-Podgurski. <i>IEEE Applied Power Electronics Conference and Exposition (APEC), 2023</i></li>
                      <br>
-                     <li> <b><a href = "https://ieeexplore.ieee.org/document/9829991" target="_blank">On the Role of Switch Output Capacitance on Passive Balancing within the Flying Capacitor Multilevel Converter</a></b> <br><b>Roderick S. Bayliss</b>, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. <i>IEEE 23rd Workshop on Control and Modeling for Power Electronics (COMPEL), 2022</i></li>
+                     <li> <b><a href = "https://ieeexplore.ieee.org/document/10131437" target="_blank">A High-Bandwidth Parallel Active Balancing Controller for Current-Controlled Flying Capacitor Multilevel Converters</a></b> <br>Rahul K. Iyer, Ivan Z. Petric, <b>Roderick S. Bayliss</b>, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. <i>IEEE Applied Power Electronics Conference and Exposition (APEC), 2023</i></li>
+                     <br>
+                     <li> <b><a href = "https://escholarship.org/uc/item/8dx3w1mf" target="_blank">On the Role of Switch Output Capacitance on Passive Balancing within the Flying Capacitor Multilevel Converter</a></b> <br><b>Roderick S. Bayliss</b>, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. <i>IEEE 23rd Workshop on Control and Modeling for Power Electronics (COMPEL), 2022</i></li>
                      <br>
                      <li> <a href = "https://ieeexplore.ieee.org/document/9830006" target="_blank"><b>Fundamental State-Space Modeling Methodology for the Flying Capacitor Multilevel Converter</b></a><br> Nathan C. Brooks, Rahul K. Iyer, <b>Roderick S. Bayliss</b>, Robert C. N. Pilawa-Podgurski. <i>IEEE 23rd Workshop on Control and Modeling for Power Electronics (COMPEL), 2022</i></li>
                      <br>
                     <li> <a href = "https://ieeexplore.ieee.org/document/9487301" target="_blank"><b>Design, Implementation, and Evaluation of High-Efficiency High-Power Radio-Frequency Inductors</b></a><br> <b>Roderick S. Bayliss</b>, Rachel S. Yang, Alex J. Hanson, Charles R. Sullivan, David J. Perreault. <i>IEEE Applied Power Electronics Conference and Exposition (APEC), 2021</i></li>
                      <br>
-                    <li> <a href = "https://ieeexplore-ieee-org.libproxy.berkeley.edu/document/9487458" target="_blank"><b>A Multi-Phase Segmented Drive Comprising Arrayed Flying Capacitor Multi-Level Modules</b></a><br> Nathan Pallo, <b>Roderick S. Bayliss</b>, Robert C. N. Pilawa-Podgurski. <i>IEEE Applied Power Electronics Conference and Exposition (APEC), 2021</i></li>
+                    <li> <a href = "https://escholarship.org/uc/item/7zk2w5xc" target="_blank"><b>A Multi-Phase Segmented Drive Comprising Arrayed Flying Capacitor Multi-Level Modules</b></a><br> Nathan Pallo, <b>Roderick S. Bayliss</b>, Robert C. N. Pilawa-Podgurski. <i>IEEE Applied Power Electronics Conference and Exposition (APEC), 2021</i></li>
                      <br>
                     <li> <a href = "https://ieeexplore-ieee-org.libproxy.berkeley.edu/document/9435213" target="_blank"><b>A Modular Multi-Phase Actively Controlled Resistive Load Bank with Zero-Current Switching Capability and Integrated Snubbers</b></a><br> Amanda Jackson, Nathan Pallo, <b>Roderick S. Bayliss</b>, Robert C. N. Pilawa-Podgurski. <i>IEEE Power and Energy Conference at Illinois (PECI), 2021</i></li> 
                 </h3>
