--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="col-xs-8">
                 <h2>
                     <br>
-                        Rod Bayliss III is a Ph.D. candidate in the Pilawa Power Electronics Research Group at the University of California, Berkeley. He previously received his B.S. and M.Eng. degrees in electrical engineering from the Massachusetts Institute of Technology (MIT) in 2020 and 2021.  His research interests include multi-level power converter design and control and high performance power magnetics design. Rod is a recipient of the Hertz Fellowship and the UC Berkeley Chancellor's Fellowship.
+                        Rod Bayliss III is a Ph.D. candidate in the Pilawa Power Electronics Research Group at the University of California, Berkeley. He previously received his B.S. and M.Eng. degrees in electrical engineering from the Massachusetts Institute of Technology (MIT) in 2020 and 2021. His research interests include multi-level power converter design and control and high performance power magnetics design. Rod is a recipient of the Hertz Fellowship and the UC Berkeley Chancellor's Fellowship.
                         <br>
                         <br>
                         <b><a href = "Rod Bayliss III CV.pdf" target="_blank">CV</a>
@@ -132,7 +132,7 @@
                      <h3>
                      <li> <b><a href = "https://escholarship.org/uc/item/1g1720kp" target="_blank">On the Role of Switch Output Capacitance on Passive Balancing Within the Flying Capacitor Multilevel Converter</a></b> <br><b>Roderick S. Bayliss</b>, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. <i>IEEE Transactions on Power Electronics, 2025</i></li>
                      <br>
-                     <li> <b><a href = "https://escholarship.org/uc/item/8bz2x11w" target="_blank">An Input Inductor Flying Capacitor Multilevel Converter Utilizing a Combined Power Factor Correcting and Active Voltage Balancing Control Technique for Buck-Type AC/DC Grid-Tied Applications</a></b> <b>Roderick S. Bayliss</b>, Robert C. N. Pilawa-Podgurski. <i>IEEE 25th Workshop on Control and Modeling for Power Electronics (COMPEL), 2024</i></li>
+                     <li> <b><a href = "https://escholarship.org/uc/item/8bz2x11w" target="_blank">An Input Inductor Flying Capacitor Multilevel Converter Utilizing a Combined Power Factor Correcting and Active Voltage Balancing Control Technique for Buck-Type AC/DC Grid-Tied Applications</a></b> <b>Roderick S. Bayliss</b>, Robert C. N. Pilawa-Podgurski. <i>IEEE 25th Workshop on Control and Modeling for Power Electronics (COMPEL), 2024</i><b> [Best Paper Award]</b></li>
                      <br>
                      <li> <b><a href = "https://ieeexplore.ieee.org/document/10601504" target="_blank">A High-Bandwidth Parallel Active Balancing Controller for Current-Controlled Flying Capacitor Multilevel Converters</a></b> <br>Rahul K. Iyer, Ivan Z. Petric, <b>Roderick S. Bayliss</b>, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. <i>IEEE Transactions on Power Electronics, 2024</i></li>
                      <br>
