--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
                 <body>
                 <ol reversed>
                      <h3>
+                     <li> <b><a href = "https://ieeexplore.ieee.org/document/11082671/" target="_blank">Generalized Averaged Modeling of Capacitor Voltage Balancing Dynamics in Flying Capacitor Multilevel Converters</a></b> <br>Rahul K. Iyer, <b>Roderick S. Bayliss</b>, Ivan Z. Petric, Seth R. Sanders, Robert C. N. Pilawa-Podgurski. <i>IEEE Transactions on Power Electronics, 2025</i></li>
+                     <br>
+                     <li> <b><a href = "https://escholarship.org/uc/item/8s4211jb?" target="_blank">Design and Analysis of a High Step-Down Ratio Capacitively-Isolated Flying Capacitor Multilevel Resonant Converter</a></b> <br><b>Roderick S. Bayliss</b>, Logan Horowitz, Robert C. N. Pilawa-Podgurski. <i>IEEE 26th Workshop on Control and Modeling for Power Electronics (COMPEL), 2025</i></li>
+                     <br>
                      <li> <b><a href = "https://escholarship.org/uc/item/1g1720kp" target="_blank">On the Role of Switch Output Capacitance on Passive Balancing Within the Flying Capacitor Multilevel Converter</a></b> <br><b>Roderick S. Bayliss</b>, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. <i>IEEE Transactions on Power Electronics, 2025</i></li>
                      <br>
                      <li> <b><a href = "https://escholarship.org/uc/item/8bz2x11w" target="_blank">An Input Inductor Flying Capacitor Multilevel Converter Utilizing a Combined Power Factor Correcting and Active Voltage Balancing Control Technique for Buck-Type AC/DC Grid-Tied Applications</a></b> <b>Roderick S. Bayliss</b>, Robert C. N. Pilawa-Podgurski. <i>IEEE 25th Workshop on Control and Modeling for Power Electronics (COMPEL), 2024</i><b> [Best Paper Award]</b></li>
