--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
         <div class="row">
             <div class="col-xs-4">
                 <br>
-                <img class="img-responsive" src="./pictures/rb3_motor_newer_crop.JPG" alt="Picture of Me" style="width:100%">         
-                <!---<img class="img-responsive" src="./pictures/RLEHeadshot - Crop.jpg" alt="Picture of Me" style="width:100%">         -->
+                <img class="img-responsive" src="./pictures/RB3 Headshot Crop.JPG" alt="Picture of Me" style="height:100%">         
             </div>
             <div class="col-xs-8">
                 <h2>
