Cropping and removing ILM

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         }
         .img-r{
             vertical-align: top;
-            height: 300px
+            max-width: 350px;
+            max-height: 200px
+            /*height: 300px*/
         }
     </style>
 <head>
@@ -74,7 +76,7 @@
         <div class="row">
             <div class="col-xs-4">
                 <br>
-                <img class="img-responsive" src="./pictures/RB3 Headshot Crop.JPG" alt="Picture of Me" style="height:100%">         
+                <img class="img-responsive" src="./pictures/RB3 Headshot Crop.JPG" alt="Picture of Me" style="width:100%">         
             </div>
             <div class="col-xs-8">
                 <h2>
@@ -98,7 +100,7 @@
                 <h5>
                     <figure class="line__figure">
                         <a href = "https://escholarship.org/uc/item/8bz2x11w" target="_blank">
-                        <img class="img-r" src = "./Gallery Photos/InputInductor.png" alt="Input Inductor six-level FCML converter prototype" title="Input Inductor FCML Converter" sizes="(max-width:479px) 479px, 100vw"/>
+                        <img class="img-r" src = "./Gallery Photos/InputInductor.png" alt="Input Inductor six-level FCML converter prototype" title="Input Inductor FCML Converter"/>
                         </a>
                         <figcaption class="rfc">Input inductor FCML converter prototype for buck-type PFC applications.</figcaption>
                     </figure>
@@ -110,16 +112,18 @@
                     </figure>
                     <figure class="line__figure">
                         <a href = "https://ieeexplore.ieee.org/document/10601504" target="_blank">
-                        <img class="img-r" src = "./Gallery Photos/12 Level.svg" alt="Photograph of 12-level FCML converter prototype" title="12-Level FCML Converter"/>
+                        <img class="img-r" src = "./Gallery Photos/12 Level Crop.svg" alt="Photograph of 12-level FCML converter prototype" title="12-Level FCML Converter"/>
                         </a>
                         <figcaption class="rfc"> 12-Level FCML converter prototype. <br> Used for buck-type PFC and FCML converter modeling and control.</figcaption>
                     </figure>
+                    <!--
                     <figure class="line__figure">
                         <a href = "https://escholarship.org/uc/item/8sd9h20p" target="_blank">
                         <img class="img-r" src = "./Gallery Photos/FCML InverterArray.JPG" alt="Photograph of Array of FCML converters for motor drive inverters" title="Interleaved Module FCML Inverter Array"/>
                         </a>
                         <figcaption class="rfc"> Array of FCML converters used for motor drive inverters for high-speed machines.</figcaption>
                     </figure>
+                -->
                 </h5>
         </div>
         <div class="row">
