Adding Buck PFC TPEL and updating CV

--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
             <div class="col-xs-8">
                 <h2>
                     <br>
-                        Roderick Bayliss III is a Ph.D. candidate in the Pilawa Power Electronics Research Group at the University of California, Berkeley. He previously received his B.S. and M.Eng. degrees in electrical engineering from the Massachusetts Institute of Technology (MIT) in 2020 and 2021. His research interests include multi-level power converter design and control, high performance power magnetics design, and motor drive system development. Roderick is a recipient of the Hertz Fellowship and the UC Berkeley Chancellor's Fellowship.
+                        Roderick Bayliss III received his B.S. and M.Eng. degrees in Electrical Engineering from the Massachusetts Institute of Technology (MIT) in 2020 and 2021. He is currently working toward the Ph.D. degree in Electrical Engineering with the Department of Electrical Engineering and Computer Sciences, University of California, Berkeley.
+                        <br>
+                        After internships at Tesla, Inc. and SpaceX, he joined the Pilawa Group at UC Berkeley. His research interests include multilevel power converter design and control and high performance power magnetics design.
+                        <br> 
+                        Mr. Bayliss III is a recipient of the UC Berkeley Chancellor’s Fellowship, the Hertz Fellowship, the IEEE COMPEL 2024 Best Paper Award, and an Outstanding Graduate Student Instructor Award from UC Berkeley.
                         <br>
                         <br>
                         <b><a href = "Rod Bayliss III CV.pdf" target="_blank">CV</a>
